Support new PooledArrays 1.0 release

--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ CategoricalArrays = "0.7, 0.8"
 Compat = "2.2, 3.0"
 DataFrames = "0.19, 0.20, 0.21"
 IndexedTables = "0.12, 0.13"
-PooledArrays = "0.5"
+PooledArrays = "0.5, 1.0"
 SortingAlgorithms = "0.3"
 SortingLab = "0.2"
 StatsBase = "0.32, 0.33"
